force-app/main/default/objects/BypassNSS__c/BypassNSS__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>BypassNSS</label>
</CustomObject>