force-app/main/default/objects/BypassNSS__c/fields/Holdout_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Holdout_Expiration__c</fullName>
    <label>Contact Holdout Expiration Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>