force-app/main/default/objects/BypassNSS__c/fields/Partner_Referral_Expiration_Duration__c.field-meta.xml
<CustomField>
    <fullName>Partner_Referral_Expiration_Duration__c</fullName>
    <description>The length in days that a lead or contact will be considered related to the corresponding Partner Referral cluster.</description>
    <label>Partner Referral Expiration Duration</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>