force-app/main/default/objects/BypassNSS__c/fields/Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Queue_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Queue Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>