force-app/main/default/objects/BypassNSS__c/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Queue Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>